Sample Java 14 app